style1.css
:root{
	--maincolor:#c4c9cd;

}

*{
	margin:0;
	padding:0;
	box-sizing:border-box;
	transition: .2s;
	outline:none;
	text-transform: capitalize;
	text-decoration: none;
}
html{
	font-size: 62.5%;
	scroll-behavior: smooth;
}
.header{
	position:fixed;
	top:0;
	left:0;
	right:0;
	display:flex;
	justify-content:space-between;
	align-items:center;
	padding:2rem 7%;
	background-color:white;
	box-shadow:rgba(0,0,0,0.35) 0px 5px 15px;
	z-index: 100000;
}
.header #logo{
	font-size:3.5rem;
	color:black;
}
.navbar a{
	color:black;
	font-size:1.7rem;
	margin-left:1rem;
}
.navbar a:hover{
	background-color:var(--maincolor);
	color:white;
	border-radius:10px;
	padding: 1rem 3rem;
}
.icons div{
	font-size: 2rem;
	margin-left: 1rem;
	color:black;
	cursor:pointer;

}
.icons div:hover{
	background-color:var(--maincolor);
	color:white;
	border-radius:10px;
	padding: 1rem 3rem;

}
#menu-bar{
	display:none;
}

.search-box.active{
    left: 40%;
}
.search-box{
    position: absolute;
    top: 110%;
    left: 100%;
    width: 50%;
    right: 2rem;
}
.search-box input{
    padding: 1.5rem 2rem;
    width: 100%;
    border-radius: 15px;
    border: 0;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}


.navbar.active{
    left: 0;
}

.main-background{
    background: url(file:///C:/Users/HARIom/Desktop/background.png);
    background-size: cover;
    background-position: center;
    margin-top: 6%;
    width: 100%;
    height: 100vh;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 15px;
}
.left-back{
    flex: 1 1 45rem;
}
.right-content h1{
font-size: 50px;
letter-spacing: 3px;
}
.left-inner{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    flex-wrap: wrap;
}
.right-content{
    flex:1 1 30rem;
}
.right-content p{
    font-size: 1.5rem;
}
.right-content i{
    font-size: 2rem;
}
.inner-main-content{
    background: black;
    padding: 2rem 2rem;
    
}
.inner-main-content h1{
    color: white;
}
.inner-main-content p{
    color: white;
    font-size: 1.5rem;
    padding: .5rem 0;
}
.inner-main-content span{
    color: white;
    font-size: 1.7rem;
    margin-right: 1rem;
}
.shopnow-btn{
    display: block;
    padding: 1rem 2rem;
    background-color: white;
    width: 40%;
    border-radius: 15px;
    color: black;
    font-size: 1.7rem;
}
.gallery{
    padding: 1rem 7%;
}
.gallery h1{
    font-size: 40px;
    text-align: center;
    padding: 1rem 0;
}
.main-gallery{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1px;
}
.inner-gallery{
    flex: 1 1 200px;
	padding-left: 0px;
	padding-right: 3px;
	
}
.inner-gallery img{
    width: 80%;
}
.girl{
	height:400px;
	width:500px;
}
.heading >h1{
	font-weight:bolder ;
	font-size: 50px;
}
.name{
	display: flex;
	justify-content: center;
	align-content: center;
	min-height:100vh;
	background: #dcdcdc;
}
.container{
	position:relative;
	width:1200px;
	display:grid;
	grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
	grid-gap: 20px;
	padding:20px;
}

.container .card{
	width:100%;
	background: #fff;
}
.container .card .imgbx{
	position:relative;
	width:100%;
	height:355px;
	overflow: hidden;
}
.container .card .imgbx img{
	position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	object-fit:cover;
	transition:0.5% ease-in-out;
	transform-origin: right;
}
.container .card:hover .imgbx img{
	transform:scale(1.3);

}
.action{
	position: absolute;
	top:10px;
	right:10px;
}
.action li{
	position: relative;
	list-style:none;
	width:40px;
	height:40px;
	background:#fff;
	display:flex;
	justify-content: center;
	align-items:center;
	margin:4px;
	cursor:pointer;
	transition:transform 0.5%;
	transform:translateX(60px);
	

}
.action li:nth-child(2){
	transition-delay: 0.15%;
}
.action li:nth-child(3){
	transition-delay: 0.3%;
}
.container .card:hover .action li{
	transform: translateX(0px);
}
.action li:hover{
	background: #ff2020;
	color:#fff;
}
.action li span{
	position:absolute;
	right:50px;
	top:50%;
	transform:translateY(-50%) translateX(-20px);
	white-space: nowrap;
	padding:4px 60px;
	background: #fff;
	color:#333;
	font-weight: 500;
	font-size: 12px;
	border-radius:none;
	opacity:0;
	transition: 0.5%;
}
.action li:hover span {
	transform:translateY(-50%) translateX(0px);
	opacity: 1;
}
.action li span::before{
	content: '';
	position: absolute;
	top:50%;
	right:-4px;
	width:8px;
	height:8px;
	background: #fff;
	transform: translateY(-50%) rotate(45deg);
}
.container .card .content .productname h3{
	font-size: 18px;
	font-weight: 500;
	color: #333;
	margin:5px 0;
}
.container .card .content .price_rating{
	display:flex;
	justify-content: space-between;
	align-items:center;
}
.container .card .content .price_rating h2{
	font-size:20px;
	color:#ff2020;
	font-weight: 500;
}
.container .card .content .price_rating .fa{
	color:#ffd513;
	cursor:pointer;
}
.container .card .content .price_rating .fa.grey{
	color: #ccc;
}
.category-product > img {
	width: 197px;
	border-radius: 60%;
	margin-bottom: 1rem;
  }
  .categories-section {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin-top: 5rem;
	margin-bottom: 5rem;
	text-align: center;
  }
  .categories-section > h1{
	font-weight:bold;
	font-size:50px;

  }
  .categories-container {
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: wrap;
	width: 70%;
  }
  .category-product > h6 {
	font-size: 20px;
	margin-bottom: 1rem;
  }
  .category-product > button {
	cursor: pointer;
	border: none;
	outline: none;
	color: white;
	background-color: #59ab6e;
	padding: 8px 20px;
	border-radius: 5px;
	font-weight: 400;
  }
               
  
  /* footer */
  .footer-section {
	background-color: #212934;
	color: white;
  }
  .footer-container {
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: wrap;
	padding: 2rem 1rem;
  }
  .menu {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	margin: 1rem;
  }
  .menu-items {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-start;
  }
  .menu-items > i {
	font-size: 40px;
	margin-bottom: 0.5rem;
  }
  .menu-items > a {
	text-decoration: none;
	color: white;
	font-weight: 400;
	font-size: 15px;
	margin-bottom: 0.5rem;
  }
  .menu > h2 {
	margin-bottom: 2rem;
  }
























@media (max-width:768px){
	html{
		font-size:50%;
	}
	#menu-bar{
		display:inline-block;
	}
	
	.header{
		padding:2rem;
	}
	.navbar{
		position:absolute;
		top:100%;
		width: 58rem;
		background: var(--maincolor);
	}
	.navbar a{
		display:block;
		color:white;
		background: black;
		margin:3rem;
		padding: 1.5rem;
		border-radius: 15px;
		width:45rem;
	}
}

